tests/error/struct_errors/recursive.py
from guppylang.decorator import guppy
from guppylang.module import GuppyModule


module = GuppyModule("test")


@guppy.struct(module)
class MyStruct:
    x: "tuple[MyStruct, int]"


module.compile()
