tests/error/struct_errors/recursive.err
Error: Unsupported (at $FILE:10:14)
   | 
 8 | @guppy.struct(module)
 9 | class MyStruct:
10 |     x: "tuple[MyStruct, int]"
   |               ^^^^^^^^ Recursive structs are not supported

Guppy compilation failed due to 1 previous error
